bug:0001598: Left Div does not allow scrolling to the bottom Jeff: please verify on your browser set.  Don't think this will work on IE.

--- a/cacti/branches/main/include/main.css
+++ b/cacti/branches/main/include/main.css
@@ -81,7 +81,6 @@ img_filter {
 	left: 0px;
 	top: 5.4em;
 	width: 100%;
-	height: 98%;
 }
 
 #vsplitter {
@@ -116,7 +115,6 @@ img_filter {
 	padding-left: 10px;
 	padding-right: 8px;
 	width: auto;
-	height: 86%;
 }
 
 #graph_tree {
@@ -129,7 +127,6 @@ img_filter {
 	padding-left: 3px;
 	padding-right: 3px;
 	padding-top: 8px;
-	height: 100%;
 	z-index: 1;
 }
 
@@ -144,7 +141,6 @@ img_filter {
 	padding-left: 8px;
 	padding-right: 8px;
 	width: auto;
-	height: 86%;
 }
 
 #graph_content {
@@ -159,7 +155,6 @@ img_filter {
 	padding-left: 5px;
 	padding-right: 18px;
 	width: 98.5%;
-	height: 86%;
 }
 
 /* menu classes */
@@ -174,7 +169,6 @@ img_filter {
 	padding-right: 3px;
 	padding-top: 8px;
 	width: 165px;
-	height: 100%;
 	z-index: 1;
 }
 
